tests/IPython.nose.txt
/usr/local/lib/python3.5/site-packages/IPython/kernel/__init__.py:13: ShimWarning: The `IPython.kernel` package has been deprecated. You should import from ipykernel or jupyter_client instead.
  "You should import from ipykernel or jupyter_client instead.", ShimWarning)
....SS.......................................S..............SSS................'%run a.py /tmp/tmpgf_zw5va/a'
E..................................E..........................................................................................................................Automatic calling is: OFF
------> autocallable()
Automatic calling is: Smart
------> len("abc")
------> len("abc");
------> len([1,2])
------> call_idx(1)
Automatic calling is: Full
------> len("abc")
------> len("abc");
------> len([1,2])
------> call_idx(1)
------> len()
Automatic calling is: Smart
def f():
    test = 1
    return test
=== Executing: ===
a += 1
=== Output: ===
  x=1
# a comment
  y=2
  x=1
# a comment
  y=2
---------------------------------------------------------------------------
OSError                                   Traceback (most recent call last)
/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py in run_code(self, code_obj, result)
   2868                 #rprint('Running code', repr(code_obj)) # dbg
-> 2869                 exec(code_obj, self.user_global_ns, self.user_ns)
   2870             finally:

<ipython-input-5-0ecbd009fc56> in <module>()
----> 1 raise IOError("foo")

OSError: foo

During handling of the above exception, another exception occurred:

TypeError                                 Traceback (most recent call last)
TypeError: <lambda>() got an unexpected keyword argument 'tb_offset'
The original exception:
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py in run_code(self, code_obj, result)
   2868                 #rprint('Running code', repr(code_obj)) # dbg
-> 2869                 exec(code_obj, self.user_global_ns, self.user_ns)
   2870             finally:

<ipython-input-5-023330d95310> in <module>()
----> 1 a=abracadabra

NameError: name 'abracadabra' is not defined

During handling of the above exception, another exception occurred:

TypeError                                 Traceback (most recent call last)
TypeError: <lambda>() got multiple values for argument 'tb_offset'
The original exception:
---------------------------------------------------------------------------
ValueError                                Traceback (most recent call last)
<ipython-input-1-6d7f71609539> in <module>()
----> 1 raise ValueError('test')

ValueError: test
  File "<ipython-input-1-0cd11c36f170>", line 1
    1f
     ^
SyntaxError: invalid syntax

Out[3]: 
1
Out[4]: 
1
..S........1 2
Out[1]: 
'a\nb'
.Out[1]: 
'a'
Out[1]: 
'a\nb'
........S..Out[1]: 
1
..Out[2]: 
1
..  File "<ipython-input-2-00dce93c346d>", line 1
    raise = 3
          ^
SyntaxError: invalid syntax

...Macro `macro_var_expand_locals` created. To execute, type its name (without quotes).
=== Macro contents: ===
str(12)
 .......Out[2]: 
3
..  File "<ipython-input-2-753048c5dc69>", line 1
    from /tmp/tmpl5yr2f0t.py import wrn
         ^
SyntaxError: invalid syntax

..---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-2-6cc3abd082ac> in <module>()
----> 1 del wrn

NameError: name 'wrn' is not defined
S...Alarm clock
.SS
KeyboardInterrupt

...Alarm clock
.S.........{'a': {'data': {'text/plain': '3'}, 'metadata': {}, 'status': 'ok'},
 'b': {'ename': 'ZeroDivisionError',
       'evalue': 'division by zero',
       'status': 'error',
       'traceback': ['ZeroDivisionError: division by zero\n']}}
  File "<ipython-input-1-9254fbaed0d8>", line 3
    print "hello"
                ^
SyntaxError: Missing parentheses in call to 'print'

Out[1]: 
Out[1]: 
('c', 'd')
E.Out[1]: 
('c', 'd')
.Out[1]: 
('c', 'd')
.Out[1]: 
('c', 'd')
......env: var='val1 '' 'val2
env: var=val2 val3="val4
env: var=val1
env: var=val2
Out[1]: 
<__main__.A at 0x7fb3a825d710>
........Available objects for config:
     TerminalInteractiveShell
     HistoryManager
     PrefilterManager
     IPCompleter
     DisplayFormatter
     MagicsManager
     ScriptMagics
     AliasManager
     StoreMagics
     StoreMagics
Out[1]: 
3
..Macro `test` created. To execute, type its name (without quotes).
=== Macro contents: ===
a=1
def b():
  return a**2
print(a,b())
 11
Macro `test` created. To execute, type its name (without quotes).
=== Macro contents: ===
a+=1
print(a)
 ...Out[7]: 
'dead'
.Flushing output cache (1 entries)
Out[8]: 
'dead'
....Flushing input history
/usr/local/lib/python3.5/site-packages/nose/tools
/
Flushing directory history
------> print('foo')
foo
Flushing input history
  File "<ipython-input-9-91e454eba04c>", line 1
    for
       ^
SyntaxError: invalid syntax

...S....CPU times: user 4 us, sys: 1 us, total: 5 us
Wall time: 7.39 us
Exception reporting mode: Plain
Doctest mode is: ON
Exception reporting mode: Context
Doctest mode is: OFF
/root/.ipython
/
/root/.ipython
/
popd -> /
Exception reporting mode: Verbose
Exception reporting mode: Plain
Exception reporting mode: Context
Out[9]: 
<A instance>
..Variable   Type    Data/Info
----------------------------
a          A       <object with id 140409605732952 (str() failed)>
.....1 loop, best of 3: 991 ns per loop
1 loop, best of 1: 2.45 us per loop
1 loop, best of 1: 2.26 us per loop
1 loop, best of 1: 1.17 us per loop
1 loop, best of 1: 2.25 us per loop
1 loop, best of 1: 2.5 us per loop
The slowest run took 122.32 times longer than the fastest. This could mean that an intermediate result is being cached.
100000000 loops, best of 3: 9.47 ns per loop
1 loop, best of 1: 52.4 us per loop
1 loop, best of 1: 68.5 us per loop
10 loops, best of 10: 75.6 ns per loop
..S..........   sys.path:
  /tmp/tmplmdk1opj
  /lib
  /
  /usr/local/bin
  /usr/local/lib/python3.5/site-packages/pandas-0.18.1-py3.5-linux-x86_64.egg
  /usr/local/lib/python3.5/site-packages/matplotlib-1.5.1-py3.5-linux-x86_64.egg
  /usr/local/lib/python3.5/site-packages/pyparsing-2.1.6-py3.5.egg
  /usr/local/lib/python3.5/site-packages/cycler-0.10.0-py3.5.egg
  /usr/local/lib/python35.zip
  /usr/local/lib/python3.5
  /usr/local/lib/python3.5/plat-linux
  /usr/local/lib/python3.5/lib-dynload
  /usr/local/lib/python3.5/site-packages
  /usr/local/lib/python3.5/site-packages/IPython/extensions
CWD /
Writing /tmp/tmp8ag6j3xu/file1
Writing /tmp/tmprjtz0zea/file1
Writing /tmp/tmpo6cewfj8/file1
Writing /tmp/tmphr_ejr_6/file2
Appending to /tmp/tmphr_ejr_6/file2
.............Starting job # 0 in a separate thread.
Starting job # 2 in a separate thread.
Starting job # 3 in a separate thread.
Created `%timeit_alias` as an alias for `%timeit`.
Created `%%timeit_alias` as an alias for `%%timeit`.
Created `%%timeit_cell_alias` as an alias for `%%timeit`.
Created `%env_alias` as an alias for `%env`.
The following commands were written to file `/tmp/tmp4x218u5h/testsave.py`:
a=1
def b():
  return a**2
print(a, b())
The following commands were written to file `/tmp/tmp4x218u5h/testsave.py`:
a=1
def b():
  return a**2
print(a, b())
The storemagic extension is already loaded. To reload it, use:
  %reload_ext storemagic
Stored 'var' (int)
IPython will make a temporary file named: /tmp/ipython_edit_km5f4wax/ipython_edit__r7pkx8b.py
.............Block assigned to 'foo'
Re-executing '        >>> x = [1,2,3]...' (119 chars)
...........S................<function f at 0x7fb3b142a2f0>
<bound method SimpleClass.method of <IPython.core.tests.test_oinspect.SimpleClass object at 0x7fb3a813e438>>
<built-in function any>
<method 'upper' of 'str' objects>
 foo()
 E....E.........Automatic calling is: Full
-------> f(1)
-------> f(-1)
-------> f(+1)
Automatic calling is: OFF
Automatic calling is: Full
-------> x(1)
Automatic calling is: OFF
.........S.........Warning: Cannot change to a different GUI toolkit: gtk. Using qt instead.
         46 function calls (45 primitive calls) in 0.000 seconds

   Ordered by: internal time

   ncalls  tottime  percall  cumtime  percall filename:lineno(function)
        2    0.000    0.000    0.000    0.000 {built-in method io.open}
        1    0.000    0.000    0.000    0.000 interactiveshell.py:2419(safe_execfile)
      2/1    0.000    0.000    0.000    0.000 {built-in method builtins.exec}
        1    0.000    0.000    0.000    0.000 py3compat.py:181(execfile)
        1    0.000    0.000    0.000    0.000 {built-in method builtins.compile}
        1    0.000    0.000    0.000    0.000 posixpath.py:318(normpath)
        1    0.000    0.000    0.000    0.000 posixpath.py:145(dirname)
        1    0.000    0.000    0.000    0.000 {method 'read' of '_io.BufferedReader' objects}
        1    0.000    0.000    0.000    0.000 posixpath.py:221(expanduser)
        1    0.000    0.000    0.000    0.000 syspathcontext.py:64(__exit__)
        1    0.000    0.000    0.000    0.000 _bootlocale.py:23(getpreferredencoding)
        1    0.000    0.000    0.000    0.000 syspathcontext.py:57(__enter__)
        1    0.000    0.000    0.000    0.000 syspathcontext.py:54(__init__)
        1    0.000    0.000    0.000    0.000 posixpath.py:355(abspath)
        4    0.000    0.000    0.000    0.000 {method 'startswith' of 'str' objects}
        2    0.000    0.000    0.000    0.000 posixpath.py:39(_get_sep)
        1    0.000    0.000    0.000    0.000 posixpath.py:61(isabs)
        1    0.000    0.000    0.000    0.000 <string>:1(<module>)
        4    0.000    0.000    0.000    0.000 {built-in method builtins.isinstance}
        1    0.000    0.000    0.000    0.000 {built-in method _locale.nl_langinfo}
        3    0.000    0.000    0.000    0.000 {method 'setdefault' of 'dict' objects}
        1    0.000    0.000    0.000    0.000 {method 'insert' of 'list' objects}
        1    0.000    0.000    0.000    0.000 {method 'rfind' of 'str' objects}
        1    0.000    0.000    0.000    0.000 codecs.py:259(__init__)
        1    0.000    0.000    0.000    0.000 {method 'split' of 'str' objects}
        2    0.000    0.000    0.000    0.000 {method 'append' of 'list' objects}
        1    0.000    0.000    0.000    0.000 {built-in method sys.getdefaultencoding}
        1    0.000    0.000    0.000    0.000 {built-in method builtins.len}
        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}
        1    0.000    0.000    0.000    0.000 {method 'join' of 'str' objects}
        1    0.000    0.000    0.000    0.000 {method 'rstrip' of 'str' objects}
        1    0.000    0.000    0.000    0.000 py3compat.py:12(no_code)
        1    0.000    0.000    0.000    0.000 {method 'remove' of 'list' objects}
        1    0.000    0.000    0.000    0.000 tmpmewa6mts.py:1(<module>)
 Out[11]: 
True
..............
IPython CPU timings (estimated):
  User   :       0.00 s.
  System :       0.00 s.
Wall time:       0.00 s.

IPython CPU timings (estimated):
Total runs performed: 10
  Times  :      Total      Per run
  User   :       0.00 s,       0.00 s.
  System :       0.00 s,       0.00 s.
Wall time:       0.00 s.
*** Blank or comment
*** Blank or comment
NOTE: Enter 'c' at the ipdb>  prompt to continue execution.
*** Blank or comment
*** Blank or comment
NOTE: Enter 'c' at the ipdb>  prompt to continue execution.
         591 function calls (588 primitive calls) in 0.003 seconds

   Ordered by: internal time

   ncalls  tottime  percall  cumtime  percall filename:lineno(function)
       21    0.000    0.000    0.000    0.000 {built-in method posix.stat}
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:816(get_data)
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:729(get_code)
        3    0.000    0.000    0.000    0.000 {built-in method posix.open}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:99(_write_atomic)
        3    0.000    0.000    0.000    0.000 {built-in method builtins.compile}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1215(find_spec)
        3    0.000    0.000    0.000    0.000 {built-in method posix.replace}
       20    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:52(<listcomp>)
       20    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:50(_path_join)
        2    0.000    0.000    0.000    0.000 {built-in method posix.listdir}
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap>:879(_find_spec)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:836(set_data)
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:246(cache_from_source)
      4/1    0.000    0.000    0.003    0.003 {built-in method builtins.exec}
       21    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:68(_path_stat)
        3    0.000    0.000    0.000    0.000 {method 'write' of '_io.FileIO' objects}
       46    0.000    0.000    0.000    0.000 {method 'rstrip' of 'str' objects}
       10    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:56(_path_split)
       12    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:78(_path_is_mode_type)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:486(_code_to_bytecode)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1047(_path_hooks)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:510(_init_module_attrs)
        1    0.000    0.000    0.000    0.000 {built-in method posix.mkdir}
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:1101(_get_spec)
       26    0.000    0.000    0.000    0.000 {method 'rpartition' of 'str' objects}
        3    0.000    0.000    0.000    0.000 {method 'read' of '_io.FileIO' objects}
        2    0.000    0.000    0.001    0.001 <frozen importlib._bootstrap>:659(_load_unlocked)
       26    0.000    0.000    0.000    0.000 {method 'join' of 'str' objects}
        2    0.000    0.000    0.002    0.001 <frozen importlib._bootstrap>:966(_find_and_load)
       17    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:366(_verbose_message)
        6    0.000    0.000    0.000    0.000 {method 'extend' of 'list' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1178(__init__)
        2    0.000    0.000    0.002    0.001 <frozen importlib._bootstrap>:939(_find_and_load_unlocked)
       11    0.000    0.000    0.000    0.000 {method 'format' of 'str' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1260(_fill_cache)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:321(__exit__)
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:40(_w_long)
        9    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:856(__exit__)
        3    0.000    0.000    0.000    0.000 {built-in method marshal.dumps}
       16    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1184(<genexpr>)
        1    0.000    0.000    0.002    0.002 runpy.py:102(_get_module_details)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:342(_get_cached)
       12    0.000    0.000    0.000    0.000 {built-in method builtins.getattr}
        1    0.000    0.000    0.001    0.001 runpy.py:88(_run_module_code)
        9    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:852(__enter__)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:513(spec_from_file_location)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:163(__enter__)
        2    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:659(exec_module)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:570(module_from_spec)
        5    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:214(_call_with_frames_removed)
        2    0.000    0.000    0.001    0.001 {built-in method builtins.__import__}
        1    0.000    0.000    0.001    0.001 runpy.py:62(_run_code)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1064(_path_importer_cache)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:176(_get_module_lock)
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:92(_path_isdir)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1210(_get_spec)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1301(path_hook_for_FileFinder)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:721(source_to_code)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:94(acquire)
        8    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:324(<genexpr>)
       10    0.000    0.000    0.000    0.000 {built-in method builtins.hasattr}
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:87(_path_isfile)
        5    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:406(cached)
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:831(_cache_bytecode)
       13    0.000    0.000    0.000    0.000 {built-in method builtins.len}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:826(path_stats)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:119(release)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:354(_calc_mode)
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:1133(find_spec)
        1    0.000    0.000    0.001    0.001 absolute.py:2(<module>)
        2    0.000    0.000    0.000    0.000 {built-in method builtins.any}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:74(__init__)
       11    0.000    0.000    0.000    0.000 {built-in method _imp.release_lock}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:789(find_spec)
        1    0.000    0.000    0.000    0.000 util.py:66(find_spec)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:716(find_spec)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:382(_check_name_wrapper)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:314(__enter__)
        6    0.000    0.000    0.000    0.000 {method 'startswith' of 'str' objects}
        9    0.000    0.000    0.000    0.000 {method 'extend' of 'bytearray' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:170(__exit__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:996(_handle_fromlist)
        1    0.000    0.000    0.002    0.002 interactiveshell.py:2551(safe_run_module)
        6    0.000    0.000    0.000    0.000 {method 'to_bytes' of 'int' objects}
        1    0.000    0.000    0.002    0.002 runpy.py:186(run_module)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:35(_new_module)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:419(parent)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:372(__init__)
        3    0.000    0.000    0.000    0.000 {built-in method _imp.is_frozen}
        9    0.000    0.000    0.000    0.000 {built-in method _imp.acquire_lock}
        2    0.000    0.000    0.000    0.000 {method 'update' of 'dict' objects}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:786(__init__)
        4    0.000    0.000    0.000    0.000 {built-in method _thread.allocate_lock}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:190(cb)
        1    0.000    0.000    0.000    0.000 runpy.py:25(__init__)
        4    0.000    0.000    0.000    0.000 {built-in method _thread.get_ident}
        1    0.000    0.000    0.000    0.000 runpy.py:30(__enter__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:225(_verbose_message)
        3    0.000    0.000    0.000    0.000 {method 'endswith' of 'str' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:159(__init__)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:811(get_filename)
        2    0.000    0.000    0.000    0.000 {method 'append' of 'list' objects}
        1    0.000    0.000    0.002    0.002 <string>:1(<module>)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:427(has_location)
        3    0.000    0.000    0.000    0.000 {built-in method builtins.id}
        1    0.000    0.000    0.000    0.000 runpy.py:57(__exit__)
        1    0.000    0.000    0.000    0.000 runpy.py:39(__exit__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:310(__init__)
        1    0.000    0.000    0.000    0.000 runpy.py:51(__enter__)
        1    0.000    0.000    0.000    0.000 {method 'copy' of 'dict' objects}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:34(_relax_case)
        1    0.000    0.000    0.000    0.000 {built-in method _imp.is_builtin}
        1    0.000    0.000    0.000    0.000 runpy.py:47(__init__)
        1    0.000    0.000    0.000    0.000 __init__.py:1(<module>)
        1    0.000    0.000    0.000    0.000 {built-in method builtins.setattr}
        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}
        3    0.000    0.000    0.000    0.000 {built-in method builtins.isinstance}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:656(create_module)
        1    0.000    0.000    0.000    0.000 sub.py:2(<module>).
          591 function calls (588 primitive calls) in 0.002 seconds

   Ordered by: internal time

   ncalls  tottime  percall  cumtime  percall filename:lineno(function)
       21    0.000    0.000    0.000    0.000 {built-in method posix.stat}
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:816(get_data)
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:729(get_code)
        3    0.000    0.000    0.000    0.000 {built-in method posix.open}
        3    0.000    0.000    0.000    0.000 {built-in method builtins.compile}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:99(_write_atomic)
        3    0.000    0.000    0.000    0.000 {built-in method posix.replace}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1215(find_spec)
       20    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:50(_path_join)
       20    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:52(<listcomp>)
        2    0.000    0.000    0.000    0.000 {built-in method posix.listdir}
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:246(cache_from_source)
      4/1    0.000    0.000    0.002    0.002 {built-in method builtins.exec}
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap>:879(_find_spec)
        3    0.000    0.000    0.000    0.000 {method 'write' of '_io.FileIO' objects}
       21    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:68(_path_stat)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:836(set_data)
       46    0.000    0.000    0.000    0.000 {method 'rstrip' of 'str' objects}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:486(_code_to_bytecode)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1047(_path_hooks)
       12    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:78(_path_is_mode_type)
       10    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:56(_path_split)
        1    0.000    0.000    0.000    0.000 {built-in method posix.mkdir}
        3    0.000    0.000    0.000    0.000 {method 'read' of '_io.FileIO' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:510(_init_module_attrs)
       26    0.000    0.000    0.000    0.000 {method 'rpartition' of 'str' objects}
       26    0.000    0.000    0.000    0.000 {method 'join' of 'str' objects}
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:1101(_get_spec)
        6    0.000    0.000    0.000    0.000 {method 'extend' of 'list' objects}
        2    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap>:659(_load_unlocked)
        2    0.000    0.000    0.002    0.001 <frozen importlib._bootstrap>:966(_find_and_load)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1178(__init__)
       17    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:366(_verbose_message)
       11    0.000    0.000    0.000    0.000 {method 'format' of 'str' objects}
       12    0.000    0.000    0.000    0.000 {built-in method builtins.getattr}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1260(_fill_cache)
        2    0.000    0.000    0.001    0.001 <frozen importlib._bootstrap>:939(_find_and_load_unlocked)
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:40(_w_long)
        1    0.000    0.000    0.001    0.001 runpy.py:88(_run_module_code)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:342(_get_cached)
        9    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:856(__exit__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:321(__exit__)
        3    0.000    0.000    0.000    0.000 {built-in method marshal.dumps}
        1    0.000    0.000    0.002    0.002 runpy.py:102(_get_module_details)
       16    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1184(<genexpr>)
        5    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:214(_call_with_frames_removed)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:513(spec_from_file_location)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:176(_get_module_lock)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1210(_get_spec)
        2    0.000    0.000    0.001    0.000 {built-in method builtins.__import__}
        9    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:852(__enter__)
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:92(_path_isdir)
       13    0.000    0.000    0.000    0.000 {built-in method builtins.len}
        1    0.000    0.000    0.001    0.001 runpy.py:62(_run_code)
        6    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:87(_path_isfile)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:721(source_to_code)
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:831(_cache_bytecode)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:354(_calc_mode)
        2    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:659(exec_module)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:570(module_from_spec)
       10    0.000    0.000    0.000    0.000 {built-in method builtins.hasattr}
        2    0.000    0.000    0.000    0.000 {built-in method builtins.any}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1301(path_hook_for_FileFinder)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:119(release)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:1064(_path_importer_cache)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:163(__enter__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:74(__init__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:94(acquire)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:826(path_stats)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:382(_check_name_wrapper)
        6    0.000    0.000    0.000    0.000 {method 'startswith' of 'str' objects}
        5    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:406(cached)
       11    0.000    0.000    0.000    0.000 {built-in method _imp.release_lock}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:789(find_spec)
        1    0.000    0.000    0.001    0.001 relative.py:2(<module>)
        6    0.000    0.000    0.000    0.000 {method 'to_bytes' of 'int' objects}
        1    0.000    0.000    0.000    0.000 util.py:66(find_spec)
        3    0.000    0.000    0.001    0.000 <frozen importlib._bootstrap_external>:1133(find_spec)
        9    0.000    0.000    0.000    0.000 {built-in method _imp.acquire_lock}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:314(__enter__)
        9    0.000    0.000    0.000    0.000 {method 'extend' of 'bytearray' objects}
        1    0.000    0.000    0.002    0.002 interactiveshell.py:2551(safe_run_module)
        1    0.000    0.000    0.002    0.002 runpy.py:186(run_module)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:35(_new_module)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:419(parent)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:716(find_spec)
        8    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:324(<genexpr>)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:372(__init__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:996(_handle_fromlist)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:786(__init__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:170(__exit__)
        4    0.000    0.000    0.000    0.000 {built-in method _thread.get_ident}
        3    0.000    0.000    0.000    0.000 {method 'endswith' of 'str' objects}
        2    0.000    0.000    0.000    0.000 {method 'update' of 'dict' objects}
        1    0.000    0.000    0.002    0.002 <string>:1(<module>)
        1    0.000    0.000    0.000    0.000 runpy.py:30(__enter__)
        3    0.000    0.000    0.000    0.000 {built-in method _imp.is_frozen}
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:34(_relax_case)
        3    0.000    0.000    0.000    0.000 {built-in method builtins.isinstance}
        1    0.000    0.000    0.000    0.000 runpy.py:25(__init__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:159(__init__)
        2    0.000    0.000    0.000    0.000 {method 'append' of 'list' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:427(has_location)
        4    0.000    0.000    0.000    0.000 {built-in method _thread.allocate_lock}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:225(_verbose_message)
        1    0.000    0.000    0.000    0.000 {built-in method builtins.setattr}
        1    0.000    0.000    0.000    0.000 runpy.py:57(__exit__)
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:310(__init__)
        1    0.000    0.000    0.000    0.000 runpy.py:39(__exit__)
        1    0.000    0.000    0.000    0.000 runpy.py:51(__enter__)
        1    0.000    0.000    0.000    0.000 {method 'copy' of 'dict' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap>:190(cb)
        1    0.000    0.000    0.000    0.000 {built-in method _imp.is_builtin}
        1    0.000    0.000    0.000    0.000 runpy.py:47(__init__)
        3    0.000    0.000    0.000    0.000 {built-in method builtins.id}
        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}
        2    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:656(create_module)
        3    0.000    0.000    0.000    0.000 <frozen importlib._bootstrap_external>:811(get_filename)
        1    0.000    0.000    0.000    0.000 sub.py:2(<module>)
        1    0.000    0.000    0.000    0.000 __init__.py:1(<module>).........S..
 ..---------------------------------------------------------------------------
SpecificException                         Traceback (most recent call last)
/tmp/tmp9wil670z.py in <module>()
      5     raise SpecificException("Success!")
      6 
----> 7 sum(sum(foo(x) for _ in [0]) for x in [0])

/tmp/tmp9wil670z.py in <genexpr>(.0)
      5     raise SpecificException("Success!")
      6 
----> 7 sum(sum(foo(x) for _ in [0]) for x in [0])

/tmp/tmp9wil670z.py in <genexpr>(.0)
      5     raise SpecificException("Success!")
      6 
----> 7 sum(sum(foo(x) for _ in [0]) for x in [0])

/tmp/tmp9wil670z.py in foo(x)
      3 
      4 def foo(x):
----> 5     raise SpecificException("Success!")
      6 
      7 sum(sum(foo(x) for _ in [0]) for x in [0])

SpecificException: Success!
..Exception reporting mode: Plain
Exception reporting mode: Verbose
Exception reporting mode: Context
.S....('/tmp/tmp9wil670z.py', 1, '<module>')
('/tmp/tmp9wil670z.py', 21, 'r3o2')
('/tmp/tmp9wil670z.py', 18, 'r3o1')
('/tmp/tmp9wil670z.py', 9, 'r3a')
('/tmp/tmp9wil670z.py', 12, 'r3b')
('/tmp/tmp9wil670z.py', 15, 'r3c')
('/tmp/tmp9wil670z.py', 9, 'r3a')
('/tmp/tmp9wil670z.py', 12, 'r3b')
('/tmp/tmp9wil670z.py', 15, 'r3c')
('/tmp/tmp9wil670z.py', 9, 'r3a')
.........E.....S......................S..................................SS........../tmp/tmpfeh9o73b
Stored 'foo' (int)
Warning:bar is <function bar at 0x7fb3a17c11e0>
Proper storage of interactively declared classes (or instances
of those classes) is not possible! Only instances
of classes in real modules on file system can be %store'd.

Stored 'foo' (int)
Starting job # 0 in a separate thread.
Starting job # 0 in a separate thread.
Flushing 1 Completed job.
Starting job # 0 in a separate thread.
Flushing 1 Dead job.
Starting job # 0 in a separate thread.
Reloading __future__
Reloading numpy
Reloading numpy.__config__
Reloading numpy.version
Reloading numpy._import_tools
Reloading os
Reloading errno
Reloading stat
Reloading _stat
Reloading posix
Reloading posixpath
Reloading genericpath
Reloading warnings
Reloading _warnings
Reloading numpy.testing
Reloading numpy.testing.nosetester
Reloading numpy.compat
Reloading numpy.compat._inspect
Reloading types
Reloading functools
Reloading _functools
Reloading abc
Reloading _weakrefset
Reloading _weakref
Reloading weakref
Reloading itertools
Reloading _thread
Reloading operator
Reloading _operator
Reloading numpy.compat.py3k
Reloading io
Reloading _io
Reloading numpy.testing.utils
Reloading re
Reloading sre_compile
Reloading _sre
Reloading sre_parse
Reloading sre_constants
Reloading _locale
Reloading copyreg
Reloading shutil
Reloading fnmatch
Reloading tarfile
Reloading time
Reloading struct
Reloading _struct
Reloading copy
Reloading org
Reloading grp
Reloading pwd
Reloading bz2
Reloading _compression
Reloading threading
Reloading traceback
Reloading linecache
Reloading _collections
Reloading _bz2
Reloading lzma
Reloading _lzma
Reloading contextlib
Reloading tempfile
Reloading random
Reloading math
Reloading hashlib
Reloading _hashlib
Reloading _random
Reloading numpy.core
Reloading numpy.core.info
Reloading numpy.core.numeric
Reloading numpy.core.umath
Reloading numpy.core.numerictypes
Reloading numbers
Reloading numpy.core.multiarray
Reloading numpy.core._internal
Reloading ctypes
Reloading _ctypes
Reloading ctypes._endian
Reloading pickle
Reloading codecs
Reloading _codecs
Reloading _compat_pickle
Reloading org
Reloading _pickle
Reloading numpy.core.arrayprint
Reloading numpy.core.fromnumeric
Reloading numpy.core.records
Reloading numpy.core.memmap
Reloading numpy.core.defchararray
Reloading numpy.core.function_base
Reloading numpy.core.machar
Reloading numpy.core.getlimits
Reloading numpy.core.shape_base
Reloading numpy.lib
Reloading numpy.lib.info
Reloading numpy.lib.type_check
Reloading numpy.lib.ufunclike
Reloading numpy.lib.index_tricks
Reloading numpy.matrixlib
Reloading numpy.matrixlib.defmatrix
Reloading numpy.lib.function_base
Reloading numpy.lib.twodim_base
Reloading numpy.lib.utils
Reloading numpy.lib.stride_tricks
Reloading numpy.lib.nanfunctions
Reloading numpy.lib.shape_base
Reloading numpy.lib.polynomial
Reloading numpy.linalg
Reloading numpy.linalg.info
Reloading numpy.linalg.linalg
Reloading numpy.lib.arraysetops
Reloading numpy.lib.npyio
Reloading numpy.lib._datasource
Reloading numpy.lib._iotools
Reloading numpy.lib.financial
Reloading numpy.lib.arrayterator
Reloading numpy.lib.arraypad
Reloading numpy.lib._version
Reloading unittest.case
Reloading difflib
Reloading heapq
Reloading _heapq
Reloading logging
Reloading string
Reloading _string
Reloading atexit
Reloading pprint
Reloading unittest.util
Reloading A
> foo -l 64 -f 'the file'
.......
4

  File "<string>", line unknown
    print(2345) # syntaxerror
                  ^
SyntaxError: input contains "syntaxerror"


16

..................................................................................S........SSS...S.....S.S.S.E........S..S.........................................................S..S............S..
======================================================================
ERROR: Failure: NameError (name 'get_ipython' is not defined)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/usr/local/lib/python3.5/site-packages/nose/failure.py", line 39, in runTest
    raise self.exc_val.with_traceback(self.tb)
  File "/usr/local/lib/python3.5/site-packages/nose/loader.py", line 418, in loadTestsFromName
    addr.filename, addr.module)
  File "/usr/local/lib/python3.5/site-packages/nose/importer.py", line 47, in importFromPath
    return self.importFromDir(dir_path, fqname)
  File "/usr/local/lib/python3.5/site-packages/nose/importer.py", line 94, in importFromDir
    mod = load_module(part_fqname, fh, filename, desc)
  File "/usr/local/lib/python3.5/imp.py", line 234, in load_module
    return load_source(name, filename, file)
  File "/usr/local/lib/python3.5/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 693, in _load
  File "<frozen importlib._bootstrap>", line 673, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 665, in exec_module
  File "<frozen importlib._bootstrap>", line 222, in _call_with_frames_removed
  File "/usr/local/lib/python3.5/site-packages/IPython/core/tests/test_displayhook.py", line 3, in <module>
    ip = get_ipython()
NameError: name 'get_ipython' is not defined

======================================================================
ERROR: IPython.core.tests.test_history.test_history
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/usr/local/lib/python3.5/site-packages/nose/case.py", line 198, in runTest
    self.test(*self.arg)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/tests/test_history.py", line 53, in test_history
    ip.magic('%hist 2-500')
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 2146, in magic
    return self.run_line_magic(magic_name, magic_arg_s)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 2067, in run_line_magic
    result = fn(*args,**kwargs)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/magic.py", line 678, in __call__
    return fn(*args, **kwargs)
  File "<decorator-gen-65>", line 2, in history
  File "/usr/local/lib/python3.5/site-packages/IPython/core/magic.py", line 188, in <lambda>
    call = lambda f, *a, **k: f(*a, **k)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/magics/history.py", line 216, in history
    print(inline, file=outfile)
UnicodeEncodeError: 'ascii' codec can't encode characters in position 3-7: ordinal not in range(128)

======================================================================
ERROR: IPython.core.tests.test_logger.test_logstart_unicode
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 2869, in run_code
    exec(code_obj, self.user_global_ns, self.user_ns)
  File "<ipython-input-1-d78af417757e>", line 1, in <module>
    'abc\u20ac'
  File "/usr/local/lib/python3.5/site-packages/IPython/core/displayhook.py", line 250, in __call__
    self.write_format_data(format_dict, md_dict)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/displayhook.py", line 189, in write_format_data
    print(result_repr)
UnicodeEncodeError: 'ascii' codec can't encode character '\u20ac' in position 4: ordinal not in range(128)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 2815, in run_ast_nodes
    if self.run_code(code, result):
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 2886, in run_code
    self.showtraceback()
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 1814, in showtraceback
    self._showtraceback(etype, value, stb)
  File "/usr/local/lib/python3.5/site-packages/IPython/testing/globalipapp.py", line 80, in _showtraceback
    print(self.InteractiveTB.stb2text(stb), file=sys.stdout)
UnicodeEncodeError: 'ascii' codec can't encode character '\u20ac' in position 209: ordinal not in range(128)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/usr/local/lib/python3.5/site-packages/nose/case.py", line 198, in runTest
    self.test(*self.arg)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/tests/test_logger.py", line 27, in test_logstart_unicode
    _ip.run_cell("'abc\u20ac'")
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 2705, in run_cell
    interactivity=interactivity, compiler=compiler, result=result)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 2834, in run_ast_nodes
    self.showtraceback()
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 1814, in showtraceback
    self._showtraceback(etype, value, stb)
  File "/usr/local/lib/python3.5/site-packages/IPython/testing/globalipapp.py", line 80, in _showtraceback
    print(self.InteractiveTB.stb2text(stb), file=sys.stdout)
UnicodeEncodeError: 'ascii' codec can't encode character '\u20ac' in position 491: ordinal not in range(128)

======================================================================
ERROR: IPython.core.tests.test_oinspect.test_pinfo_nonascii
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/usr/local/lib/python3.5/site-packages/nose/case.py", line 198, in runTest
    self.test(*self.arg)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/tests/test_oinspect.py", line 427, in test_pinfo_nonascii
    ip._inspect('pinfo', 'nonascii2', detail_level=1)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/interactiveshell.py", line 1522, in _inspect
    enable_html_pager=self.enable_html_pager, **kw)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/oinspect.py", line 718, in pinfo
    page.page(info)
  File "/usr/local/lib/python3.5/site-packages/IPython/core/page.py", line 274, in page
    return pager_page(data, start, screen_lines, pager_cmd)
  File "/usr/local/lib/python3.5/site-packages/IPython/testing/globalipapp.py", line 146, in nopage
    print(strng)
UnicodeEncodeError: 'ascii' codec can't encode characters in position 329-366: ordinal not in range(128)

======================================================================
ERROR: Failure: ImportError (No module named 'testpath')
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/usr/local/lib/python3.5/site-packages/nose/failure.py", line 39, in runTest
    raise self.exc_val.with_traceback(self.tb)
  File "/usr/local/lib/python3.5/site-packages/nose/loader.py", line 418, in loadTestsFromName
    addr.filename, addr.module)
  File "/usr/local/lib/python3.5/site-packages/nose/importer.py", line 47, in importFromPath
    return self.importFromDir(dir_path, fqname)
  File "/usr/local/lib/python3.5/site-packages/nose/importer.py", line 94, in importFromDir
    mod = load_module(part_fqname, fh, filename, desc)
  File "/usr/local/lib/python3.5/imp.py", line 234, in load_module
    return load_source(name, filename, file)
  File "/usr/local/lib/python3.5/imp.py", line 172, in load_source
    module = _load(spec)
  File "<frozen importlib._bootstrap>", line 693, in _load
  File "<frozen importlib._bootstrap>", line 673, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 665, in exec_module
  File "<frozen importlib._bootstrap>", line 222, in _call_with_frames_removed
  File "/usr/local/lib/python3.5/site-packages/IPython/core/tests/test_paths.py", line 14, in <module>
    from testpath import modified_env, assert_isdir, assert_isfile
ImportError: No module named 'testpath'

======================================================================